2013/12/22 Finished : Fixed resposive layout problems.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -148,11 +148,19 @@ section{
 }
 
 section#skillSet{
-	article{
-		h1{
-			margin:5% 0 10px;			
-		}
-	}
+	#p5Parent{
+		@include span-columns(8 omega,12);
+		@include pad(2,2);
+		canvas{
+			height:95%; 
+			width:100%;
+			outline: none;
+			-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+			-moz-tap-highlight-color: rgba(255, 255, 255, 0);
+			-ms-tap-highlight-color: rgba(255, 255, 255, 0);
+			-o-tap-highlight-color: rgba(255, 255, 255, 0);
+		}		
+	}	
 }
 
 section#about{	
@@ -253,7 +261,7 @@ section#contact{
   			font-weight: bold;
   			letter-spacing:2px;
   			margin:40px 0 20px;
-  			text-align: center; 			
+  			text-align: center;
   		}
   	}
   	#linkGroup{
@@ -331,19 +339,7 @@ footer{
 	}
 }
 
-#p5Parent{
-	@include span-columns(8 omega,12);
-	@include pad(2,2);
-	canvas{
-		height:95%; 
-		width:100%;
-		outline: none;
-		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-		-moz-tap-highlight-color: rgba(255, 255, 255, 0);
-		-ms-tap-highlight-color: rgba(255, 255, 255, 0);
-		-o-tap-highlight-color: rgba(255, 255, 255, 0);
-	}		
-}	
+
 
 .verticalAlignContainer{
 	display: table;
@@ -387,6 +383,14 @@ footer{
 			border:1px solid $grey;
 			padding: 40px 140px;
 		}
+		aside{
+			h1{
+				font-size: 12px;
+		  		top:48%;
+			}
+			.asideLeft{	left:-80px;	}
+		  	.asideRight{ right:-80px; }	
+		}
 		.charBlock{
 			width: 80px;
 			height: 80px;
@@ -407,8 +411,10 @@ footer{
 			padding-right: 1px;
 		}
 	}
+	
 	section{
 		@include span-columns(12,12);
+		height:100%;
 		article{
 			@include span-columns(6,12);
 			@include pad(3,3);
@@ -431,12 +437,18 @@ footer{
 			}	  		
 		}	
 	}
+	section#skillSet{
+		#p5Parent{
+			@include span-columns(10 omega,12);
+			@include pad(1,1);
+		}	
+	}
 	section#about{	
 		article{
 			@include span-columns(10,12);
 			@include pad(1,1);
 			#aboutFrame{
-				padding:40px 100px;
+				padding:20px 50px;
 				text-align: justify;
 			}
 			h1{
@@ -469,25 +481,24 @@ footer{
 			}
 		}
 	}
-
 	section#contact{
 		height: 70%;
 	  	article{
 	  		h2
 	  		{
-	  			font-size: 40px;
+	  			font-size: 32px;
 	  			margin:20px 0 10px;			
 	  		}
 	  	}
 	  	#linkGroup{
 	  		margin-top: 10px;
 	  		.socialIcon{
-	  			font-size: 40px;
-	  			width: 60px;	 
-	  			height: 56px;
-	  			padding-top:5px;
+	  			font-size: 32px;
+	  			width: 44px;	 
+	  			height: 42px;
+	  			padding-top:2px;
 	  			span{
-	  				font-size:24px;
+	  				font-size:20px;
 	  				-webkit-transform: translateY(-12px);
 					-moz-transform: translateY(-14px);
 					-ms-transform: translateY(-14px);
@@ -497,7 +508,7 @@ footer{
 	  	}
 	}
 	#goTop{
-		@include span-columns(10,12);
+		@include span-columns(10 omega,12);
 		@include pad(1,1);
 		font-size: 32px;
 		margin-bottom: -7px;
@@ -515,8 +526,11 @@ footer{
 		}
 	}
 	footer{
-		@include span-columns(12,12);
-		height: 30%;
+		@include span-columns(12 omega,12);
+		height: 20%;
+		h1{
+			margin-top: 10px;
+		}
 	}
 
 }
@@ -553,31 +567,31 @@ footer{
 			letter-spacing: 0px;
 		}
 	}
-	#p5Parent{
-		@include span-columns(6 omega,6);
-		@include pad(0,0);
-	}	
 	section{
 		@include span-columns(6 omega,6);
 		font-family: 'Oxygen', sans-serif;
-		height: 100%;
+		height: auto;
 		article{
 			@include span-columns(6 omega,6);
 			@include pad(0,0);
 			h1{
-				font-size: 24px;
+				font-size: 18px;
 				margin:10px 0 4px;
 				text-align: center; 			
 			}				
 			p{
-				font-size: 16px;
+				font-size: 12px;
 				margin:10px 0;
-				line-height: 20px;
+				line-height: 16px;
 			}
 		}	
 	}
+	section#top{
+		height: 100%;
+	}
 	section#about{
 		background-color:$darkGray;
+		height: 100%;
 		article{
 			@include span-columns(6 omega,6);
 			@include pad(0,0);
@@ -586,12 +600,36 @@ footer{
 				padding:0 20px;
 				text-align: justify;
 			}
-			h1{
-				margin:0 0 4px;			
-			}
 			p{
-				font-size: 14px;
+				font-size: 12px;
 				letter-spacing: 0px;
+			}
+		}
+	}
+	section#work{
+		article{
+			@include span-columns(6 omega,6);
+			@include pad(0,0);
+			a:hover .galleryGrid{
+				border: 6px solid $orange;
+				padding: 0;
+			}
+			a:focus .galleryGrid{
+				border: 6px solid $orange;
+				padding: 0;
+			}	
+			.galleryGrid{
+				width:80%;
+				margin:80px 0;
+				p{
+					font-size: 14px;
+				}				
+			}
+			#moreWork{
+				h2{
+					font-size: 14px;
+					padding: 10px 20px;
+				}
 			}
 		}
 	}
@@ -603,7 +641,7 @@ footer{
 	  		h2
 	  		{
 	  			margin:20px 0 4px;
-	  			font-size: 20px;
+	  			font-size: 18px;
 	  			letter-spacing:1px;		
 	  		}
 	  	}
